@@ -44,66 +44,68 @@ corresponding vector in errors.c *must* be updated too. */
 #define OK		(0)
 
 enum error {
-	SYNTAX_ERROR = 1,
-	NOT_FOUND,
-	CANT_SAVE_EXIT_SUSPENDED,
-	NOT_ON_A_BRACKET,
-	CANT_FIND_BRACKET,
-	BOOKMARK_NOT_SET,
-	INVALID_BOOKMARK_DESIGNATION, 
-	NO_UNSET_BOOKMARKS_TO_SET,
-	NO_SET_BOOKMARKS_TO_GOTO,
-	NO_SET_BOOKMARKS_TO_UNSET,
-	INVALID_LEVEL,
-	CANT_INSERT_0,
-	NO_SEARCH_STRING,
-	NO_REPLACE_STRING,
-	TAB_SIZE_OUT_OF_RANGE,
-	INVALID_MATCH_MODE,
-	MARK_BLOCK_FIRST,
-	OUT_OF_MEMORY,
-	NOTHING_TO_UNDO,
-	NOTHING_TO_REDO,
-	UNDO_NOT_ENABLED,
-	NO_SUCH_COMMAND,
-	CAN_EXECUTE_ONLY_OPTIONS,
-	HAS_NUMERIC_ARGUMENT,
-	HAS_NO_ARGUMENT,
-	REQUIRES_ARGUMENT,
-	WRONG_CHAR_AFTER_BACKSLASH,
-	CANT_OPEN_FILE,
-	CANT_OPEN_TEMPORARY_FILE,
-	ERROR_WHILE_WRITING,
-	HAS_NO_EXTENSION,
-	CANT_FIND_PREFS_DIR,
-	CLIP_DOESNT_EXIST,
-	MARK_OUT_OF_BUFFER,
-	CANT_OPEN_MACRO,
-	MAX_MACRO_DEPTH_EXCEEDED,
-	FILE_IS_READ_ONLY,
-	FILE_IS_MIGRATED,
-	FILE_IS_DIRECTORY,
-	FILE_IS_TOO_LARGE,
-	STOPPED,
-	IO_ERROR,
-	STRING_IS_EMPTY,
-	EXTERNAL_COMMAND_ERROR,
-	ESCAPE_TIME_OUT_OF_RANGE,
-	PREFS_STACK_FULL,
-	PREFS_STACK_EMPTY,
-	NOT_A_NUMBER,
-	INVALID_CHARACTER,
-	INVALID_STRING,
-	BUFFER_IS_NOT_UTF8,
-	INCOMPATIBLE_CLIP_ENCODING,
-	INCOMPATIBLE_COMMAND_ENCODING,
-	INCOMPATIBLE_SEARCH_STRING_ENCODING,
-	INCOMPATIBLE_REPLACE_STRING_ENCODING,
-	UTF8_REGEXP_CHARACTER_CLASS_NOT_SUPPORTED,
-	UTF8_REGEXP_COMP_CHARACTER_CLASS_NOT_SUPPORTED,
-	GROUP_NOT_AVAILABLE,
-	SYNTAX_NOT_ENABLED,
-	NO_SYNTAX_FOR_EXT,
+	/*  1 */ SYNTAX_ERROR = 1,
+	/*  2 */ NOT_FOUND,
+	/*  3 */ CANT_SAVE_EXIT_SUSPENDED,
+	/*  4 */ NOT_ON_A_BRACKET,
+	/*  5 */ CANT_FIND_BRACKET,
+	/*  6 */ BOOKMARK_NOT_SET,
+	/*  7 */ INVALID_BOOKMARK_DESIGNATION, 
+	/*  8 */ NO_UNSET_BOOKMARKS_TO_SET,
+	/*  9 */ NO_SET_BOOKMARKS_TO_GOTO,
+	/* 10 */ NO_SET_BOOKMARKS_TO_UNSET,
+	/* 11 */ INVALID_LEVEL,
+	/* 12 */ CANT_INSERT_0,
+	/* 13 */ NO_SEARCH_STRING,
+	/* 14 */ NO_REPLACE_STRING,
+	/* 15 */ TAB_SIZE_OUT_OF_RANGE,
+	/* 16 */ INVALID_MATCH_MODE,
+	/* 17 */ MARK_BLOCK_FIRST,
+	/* 18 */ OUT_OF_MEMORY,
+	/* 19 */ NOTHING_TO_UNDO,
+	/* 20 */ NOTHING_TO_REDO,
+	/* 21 */ UNDO_NOT_ENABLED,
+	/* 22 */ NO_SUCH_COMMAND,
+	/* 23 */ CAN_EXECUTE_ONLY_OPTIONS,
+	/* 24 */ HAS_NUMERIC_ARGUMENT,
+	/* 25 */ HAS_NO_ARGUMENT,
+	/* 26 */ REQUIRES_ARGUMENT,
+	/* 27 */ WRONG_CHAR_AFTER_BACKSLASH,
+	/* 28 */ CANT_OPEN_FILE,
+	/* 29 */ CANT_OPEN_TEMPORARY_FILE,
+	/* 30 */ ERROR_WHILE_WRITING,
+	/* 31 */ HAS_NO_EXTENSION,
+	/* 32 */ CANT_FIND_PREFS_DIR,
+	/* 33 */ CLIP_DOESNT_EXIST,
+	/* 34 */ MARK_OUT_OF_BUFFER,
+	/* 35 */ CANT_OPEN_MACRO,
+	/* 36 */ MAX_MACRO_DEPTH_EXCEEDED,
+	/* 37 */ FILE_IS_READ_ONLY,
+	/* 38 */ FILE_IS_MIGRATED,
+	/* 39 */ FILE_IS_DIRECTORY,
+	/* 40 */ FILE_IS_TOO_LARGE,
+	/* 41 */ STOPPED,
+	/* 42 */ IO_ERROR,
+	/* 43 */ STRING_IS_EMPTY,
+	/* 44 */ EXTERNAL_COMMAND_ERROR,
+	/* 45 */ ESCAPE_TIME_OUT_OF_RANGE,
+	/* 46 */ PREFS_STACK_FULL,
+	/* 47 */ PREFS_STACK_EMPTY,
+	/* 48 */ NOT_A_NUMBER,
+	/* 49 */ INVALID_CHARACTER,
+	/* 50 */ INVALID_STRING,
+	/* 51 */ BUFFER_IS_NOT_UTF8,
+	/* 52 */ INCOMPATIBLE_CLIP_ENCODING,
+	/* 53 */ INCOMPATIBLE_COMMAND_ENCODING,
+	/* 54 */ INCOMPATIBLE_SEARCH_STRING_ENCODING,
+	/* 55 */ INCOMPATIBLE_REPLACE_STRING_ENCODING,
+	/* 56 */ UTF8_REGEXP_CHARACTER_CLASS_NOT_SUPPORTED,
+	/* 57 */ UTF8_REGEXP_COMP_CHARACTER_CLASS_NOT_SUPPORTED,
+	/* 58 */ GROUP_NOT_AVAILABLE,
+	/* 59 */ SYNTAX_NOT_ENABLED,
+	/* 60 */ NO_SYNTAX_FOR_EXT,
+	/* 61 */ INVALID_SHIFT_SPECIFIED,
+	/* 62 */ INSUFFICIENT_WHITESPACE,
 
 	ERROR_COUNT
 };
